--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,8 +10,10 @@ body {
   background: #3366cc;
   font-family: sans-serif;
   font-family: 'Nunito', sans-serif;
+  color: #fff;
 }
 
+/* text */
 .title {
   font-family: 'Lexend Giga', sans-serif;
 }
@@ -20,12 +22,8 @@ body {
   text-align: center;
 }
 
-.col-primary {
-  color: #3366cc;
-}
-
-small {
-  font-size: .4em;
+.title small {
+  font-size: .5em;
   display: block;
   font-family: 'Nunito', sans-serif;
   font-weight: 200;
@@ -33,7 +31,7 @@ small {
 /* layout style */
 
 #site {
-  background: #fff;
+
   max-width: 600px;
   margin: 10px auto;
   padding: 25px;
@@ -47,7 +45,7 @@ small {
   font-size: 18px;
   border: 0;
   outline: none;
-  box-shadow: 0 5px 5px -3px rgba(0,0,0,.3);
+  box-shadow: 0 10px 10px -3px rgba(0,0,0,.3);
 }
 
 /* todo */
@@ -60,7 +58,7 @@ small {
   justify-content: space-between;
   margin-bottom: 15px;
   padding-bottom: 10px;
-  border-bottom: 1px solid rgba(0,0,0, .2);
+  border-bottom: 1px solid rgba(255,255,255, .2);
 }
 
 .todo-list li:last-child {
